[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/spot_the_diff.gd" id="1_script"]

[node name="SpotTheDiff" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SPOT THE DIFFERENCE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxInfo" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer/HBoxInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxInfo"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Found: 0 / 8"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="LeftPanel" type="VBoxContainer" parent="VBoxContainer/GridsContainer"]
layout_mode = 2
alignment = 1

[node name="LeftTitle" type="Label" parent="VBoxContainer/GridsContainer/LeftPanel"]
layout_mode = 2
text = "ORIGINAL"
horizontal_alignment = 1

[node name="LeftGrid" type="GridContainer" parent="VBoxContainer/GridsContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[node name="GridSpacer" type="Control" parent="VBoxContainer/GridsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)

[node name="RightPanel" type="VBoxContainer" parent="VBoxContainer/GridsContainer"]
layout_mode = 2
alignment = 1

[node name="RightTitle" type="Label" parent="VBoxContainer/GridsContainer/RightPanel"]
layout_mode = 2
text = "FIND THE DIFF"
horizontal_alignment = 1

[node name="RightGrid" type="GridContainer" parent="VBoxContainer/GridsContainer/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Get ready..."
horizontal_alignment = 1
vertical_alignment = 1
